test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-source-delete-source/chainsaw-step-01-apply-1-3.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: clone-list-sync-same-trigger-source-cpol
spec:
  rules:
  - generate:
      cloneList:
        kinds:
        - v1/Secret
        namespace: clone-list-sync-same-trigger-source-trigger-ns
        selector:
          matchLabels:
            allowedToBeCloned: "true"
      namespace: '{{ request.object.metadata.annotations."myProj/cluster.addon.sync.targetNamespace"
        }}'
      synchronize: true
    match:
      all:
      - resources:
          annotations:
            myProj/cluster.addon.sync.targetNamespace: ?*
          kinds:
          - Secret
          namespaces:
          - clone-list-sync-same-trigger-source-trigger-ns
    name: sync-secret
