test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-source-delete-source/target.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  annotations:
    myProj/cluster.addon.sync.targetNamespace: clone-list-sync-same-trigger-source-target-ns
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret
  namespace: clone-list-sync-same-trigger-source-target-ns
type: Opaque
