test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-list-sync-same-trigger-source-delete-source/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: clone-list-sync-same-trigger-source-delete-source
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
    - assert:
        file: chainsaw-step-01-assert-1-1.yaml
  - name: step-02
    try:
    - apply:
        file: trigger.yaml
    - assert:
        file: target.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Secret
          name: mysecret
          namespace: clone-list-sync-same-trigger-source-trigger-ns
  - name: step-04
    try:
    - sleep:
        duration: 3s
  - name: step-05
    try:
    - error:
        file: target.yaml
